--- a/src/Presentation/SmartStore.Web/Administration/Content/variables.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/variables.less
@@ -55,7 +55,7 @@
 
 @headingsFontFamily:    'Segoe UI Light', 'Segoe UI', Arial, Helvetica, sans-serif; //inherit; // empty to use BS default, @baseFontFamily
 @headingsFontWeight:    lighter; //bold;    // instead of browser default, bold
-@headingsColor:         #009fff; //inherit; // empty to use BS default, @textColor
+@headingsColor:         #7b4f9d; //#009fff; //inherit; // empty to use BS default, @textColor
 
 
 // Component sizing
@@ -142,7 +142,7 @@
 // Try to avoid customizing these :)
 @zindexDropdown:          1000;
 @zindexPopover:           1010;
-@zindexTooltip:           1030;
+@zindexTooltip:           2080; //1030;
 @zindexFixedNavbar:       1030;
 @zindexModalBackdrop:     1040;
 @zindexModal:             1050;
