--- a/src/Presentation/SmartStore.Web/Administration/Views/Shipping/ConfigureProvider.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shipping/ConfigureProvider.cshtml
@@ -7,6 +7,9 @@
     <div class="title">
         @T("Admin.Configuration.Shipping.Providers.Configure") - @Model.FriendlyName @Html.ActionLink("(" + T("Admin.Configuration.Shipping.Providers.BackToList") + ")", "Providers")
     </div>
+    <div class="options">
+        <!-- action buttons -->
+    </div>
 </div>
 @if (!String.IsNullOrEmpty(Model.ConfigurationActionName))
 {
