--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureMiscPlugin.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureMiscPlugin.cshtml
@@ -8,6 +8,9 @@
         <i class="icon icon-cog"></i>
         @T("Admin.Configuration.Plugins.Misc.Configure") - @Model.FriendlyName @Html.ActionLink("(" + T("Admin.Configuration.Plugins.Misc.BackToList") + ")", "List")
     </div>
+    <div class="options">
+        <!-- action buttons -->
+    </div>
 </div>
 @if (!String.IsNullOrEmpty(Model.ConfigurationActionName))
 {
