#54 There is no logo image with IE8

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -80,6 +80,9 @@ nav ul, nav li {
 	font-weight: @headingsFontWeight;
 }
 
+.ie8 #logobar img {
+	max-width: auto;
+}
 
 /* NAV-HOME (top menu)
 ------------------------------ */
