When a customer registered himself during checkout process he wasn't redirected to the cart

--- a/src/Presentation/SmartStore.Web/Views/Customer/Register.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Register.cshtml
@@ -1,4 +1,8 @@
-﻿@*codehint: sm-refactored-completly *@
+﻿@using SmartStore.Core;
+@using SmartStore.Core.Infrastructure;
+@using SmartStore.Core.Infrastructure.DependencyManagement;
+
+@*codehint: sm-refactored-completly *@
 @model RegisterModel
 @using SmartStore.Web.Models.Customer;
 @{
@@ -38,7 +42,7 @@
         });
     </script>
 }
-@using (Html.BeginForm("Register", "Customer", FormMethod.Post, new { @class = "form-horizontal" }))
+@using (Html.BeginForm("Register", "Customer", new { returnUrl = this.Context.Request.QueryString["returnUrl"] }, FormMethod.Post, new { @class = "form-horizontal" }))
 {
     @Html.AntiForgeryToken()
     <div class="page registration-page">
