--- a/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/List.cshtml
@@ -22,31 +22,24 @@
                     .Name("returnrequests-grid")
                     .Columns(columns =>
                     {
-                        columns.Bound(x => x.Id)
-                            .Width(50);
+						columns.Bound(x => x.Id);
                         columns.Bound(x => x.ProductName)
-                            .Width(200)
-                            .Template(x => Html.ActionLink(x.ProductName, "Edit", "ProductVariant", new { id = x.ProductVariantId }, new { }))
-                            .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/ProductVariant/Edit/") + "<#= ProductVariantId #>\"><#= ProductName #></a>");
+                           .Template(x => Html.ActionLink(x.ProductName, "Edit", "ProductVariant", new { id = x.ProductVariantId }, new { }))
+                           .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/ProductVariant/Edit/") + "<#= ProductVariantId #>\"><#= ProductName #></a>");
                         columns.Bound(x => x.Quantity)
-                            .Width(50)
                             .Centered();
                         columns.Bound(x => x.CustomerId)
-                            .Width(50)
                             .Template(x => Html.ActionLink(T("Admin.Common.View").Text, "Edit", "Customer", new { id = x.CustomerId }, new { }))
-                            .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Customer/Edit/") + "<#= CustomerId #>\">" + T("Admin.Common.View").Text + "</a>");
+							.ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Customer/Edit/") + "<#= CustomerId #>\"><#= CustomerFullName #></a>");
                         columns.Bound(x => x.OrderId)
-                            .Width(50)
+                            .Centered()
                             .Template(x => Html.ActionLink(T("Admin.Common.View").Text, "Edit", "Order", new { id = x.OrderId }, new { }))
-                            .ClientTemplate("<a href=\""+ @Url.Content("~/Admin/Order/Edit/") + "<#= OrderId #>\">" + T("Admin.Common.View").Text + "</a>");
+							.ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Order/Edit/") + "<#= OrderId #>\"><#= OrderId #></a>");
                         columns.Bound(x => x.CreatedOn)
-                            .Width(100)
                             .Centered();
                         columns.Bound(x => x.ReturnRequestStatusStr)
-                            .Width(100)
                             .Centered();
                         columns.Bound(x => x.Id)
-                            .Width(50)
                             .Centered()
                             .Template(x => Html.ActionLink(T("Admin.Common.Edit").Text, "Edit", new { id = x.Id }))
                             .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
