#56 Delivery time in product list

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -883,6 +883,14 @@ form.form-search {
     font-size: 0; 
     overflow: hidden; 
 }
+
+.item-box.details .delivery-time {
+    text-align: left !important;
+}
+.item-box.details .delivery-time .attr-label span strong {
+    color: #464646 !important;
+}
+
 .item-box.details figure.picture .colors {
     position: relative;
     .opacity(50);
