#63 The product and category headings should be changed from H2 to H1

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1116,6 +1116,12 @@ form.form-search {
 	h3 { font-size: 20px; line-height: 24px }
 	h4, h5, h6 { font-size: 14px; line-height: 16px }
 }
+.category-page h1.page-title,
+.product-details-page .page-title h1 {
+    font-size: 26px; 
+    line-height: 30px;
+}
+
 
 .nobr {
 	white-space: nowrap !important;
