--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/datepicker.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/datepicker.less
@@ -3,6 +3,7 @@
  *
  * Copyright 2012 Stefan Petre
  * Improvements by Andrew Rowls
+ * https://github.com/eternicode/bootstrap-datepicker
  * Licensed under the Apache License v2.0
  * http://www.apache.org/licenses/LICENSE-2.0
  *
