Minor layout changes in password recovery

--- a/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecoveryConfirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecoveryConfirm.cshtml
@@ -25,27 +25,26 @@
             {
                 
             <fieldset class="form-fields">
-                <dl>
-                    <dt>
-                        @Html.LabelFor(model => model.NewPassword):</dt>
-                    <dd>
+
+                <div class="control-group">
+                    @Html.LabelFor(model => model.NewPassword, new { @class = "control-label required", @for = "NewPassword" })
+                    <div class="controls">
                         @Html.EditorFor(model => model.NewPassword)
-                        @Html.RequiredHint()
                         @Html.ValidationMessageFor(model => model.NewPassword)
-                    </dd>
-                    <dt>
-                        @Html.LabelFor(model => model.ConfirmNewPassword):</dt>
-                    <dd>
+                    </div>
+                </div>
+                <div class="control-group">
+                    @Html.LabelFor(model => model.ConfirmNewPassword, new { @class = "control-label required", @for = "ConfirmNewPassword" })
+                    <div class="controls">
                         @Html.EditorFor(model => model.ConfirmNewPassword)
-                        @Html.RequiredHint()
                         @Html.ValidationMessageFor(model => model.ConfirmNewPassword)
-                    </dd>
-                </dl>
+                    </div>
+                </div>
+
             </fieldset>
-            <div class="clear">
-            </div>
+            
             <div class="buttons">
-                <input type="submit" name="set-password" class="button-1 new-password-button" value="@T("Account.PasswordRecovery.ChangePasswordButton")" />
+                <input type="submit" name="set-password" class="btn btn-danger" value="@T("Account.PasswordRecovery.ChangePasswordButton")" />
             </div>
             }
         }
