Minor tweak on multistore setting's flip button alignment

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1229,8 +1229,8 @@ table.order-edit td {
 -------------------------------------------------------------- */
 .onoffswitch-container {
 	display: inline-block;
-	vertical-align: top;
-	margin: 4px 2px 0 0;
+	margin: 1px 2px 0 0;
+    vertical-align: middle;
 }
 
 .onoffswitch {
